V 0.02A_220520   - Included fled_time.h   - Introducing libboost-all-dev-1.74.0.3+b1 c++ libraries.    - Modified rasapi and added functions.   - Started working on framework of airbandapi.h   - Modified CMakeLists.txt to accept boost library for compile.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -51,6 +51,11 @@ find_library(LIBPTHREAD pthread REQUIRED)
 
 find_package(PkgConfig REQUIRED)
 
+# ----------------  brief  ----------------
+find_package(Boost 1.74.0 COMPONENTS filesystem)
+INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
+# ----------------  brief  ----------------
+
 pkg_check_modules(CONFIG REQUIRED libconfig++)
 list(APPEND rtl_airband_extra_libs ${CONFIG_LIBRARIES})
 list(APPEND rtl_airband_include_dirs ${CONFIG_INCLUDE_DIRS})
@@ -291,6 +296,9 @@ target_link_libraries (rtl_airband
 	m
 	pthread
 	${rtl_airband_extra_libs}
+  # ----------------  brief  ----------------
+  ${Boost_LIBRARIES}
+  # ----------------  brief  ----------------
 )
 
 install(TARGETS rtl_airband
