V 0.04A_220522   - Spent the better part of a day coding an api via file transfer.   - Spent the better part of the next day getting a basic understanding        of shared memory regions.   - Spent the better part of the next day trying to initialize shared        memory region variables in the header portion of a class variable.        I was unsucessful and the way these functions are called is new        to me.    - The API to RasFLED is working and sending, with scan option only,        Frequency, Signal Level, Noise Level, Signal Outside of Filter,        and, Channel open status.   - the boost library 1.74.0 , from boost.org is and will from now on,        be referenced.  I was avoiding pulling in, or including in any way,         more libraries to avoid the problems associated to required dependancies.        I've decided to reference boost libraries because of the programmer        community's excelent reviews, and the variety of useful functions provided.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -48,11 +48,14 @@ set(CMAKE_REQUIRED_LIBRARIES ${CMAKE_REQUIRED_LIBRARIES_ORIG})
 find_library(LIBM m REQUIRED)
 find_library(LIBDL dl REQUIRED)
 find_library(LIBPTHREAD pthread REQUIRED)
+# ----------------  brief  ----------------
+find_library(LIBRT rt)
+# ----------------  brief  ----------------
 
 find_package(PkgConfig REQUIRED)
 
 # ----------------  brief  ----------------
-find_package(Boost 1.74.0 COMPONENTS filesystem)
+find_package(Boost 1.74.0 COMPONENTS interprocess)
 INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
 # ----------------  brief  ----------------
 
@@ -297,6 +300,7 @@ target_link_libraries (rtl_airband
 	pthread
 	${rtl_airband_extra_libs}
   # ----------------  brief  ----------------
+  ${LIBRT}
   ${Boost_LIBRARIES}
   # ----------------  brief  ----------------
 )
